                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-03-2006 fixed: icons for shares, dvd label update, dvd button in my programs.
 - 23-03-2006 fixed: dvdplayer would play out of sync for files with completly wrong frame rate in container. 5 < pts < 100 is considered valid
 - 23-03-2006 fixed: rgb renderer would leak memory on multiple calls to configure (video file change res/fps/aspect during playback)
 - 23-03-2006 fixed: Some of the random routines weren't very optimal.
 - 23-03-2006 fixed: dvdplayer would microstutter alot more than normal since 2006-03-11
 - 23-03-2006 fixed: my programs dvd share didn't have play disc entry.
 - 23-03-2006 fixed: old cdda rip path could be lost when browser was opened.
 - 23-03-2006 fixed: dvdplayer would fail to play urls with shout:// instead of http:// (fixes play using in Shoutcast Top 500)
 - 23-03-2006 fixed: file browser was broken since yesterday
 - 23-03-2006 fixed: dvdplayer would always assume an http stream was shoutcast.
 - 23-03-2006 fixed: dvdplayer would not end playback on read error when playing from file.
 - 23-03-2006 fixed: display of temparature texts in system info for non latin charsets
 - 23-03-2006 fixed: Trainer settings dialog couldn't take more than 8 buttons.
 - 23-03-2006 fixed: Skin reload would crash after trainer settings dialog was on screen.
 - 23-03-2006 changed: Default sort direction for program count, date, rating and size is now descending.
 - 23-03-2006 fixed: cdda rip path had to be specified in xml instead of in gui.
 - 22-03-2006 fixed: [ 1455993 ] Minor cosmetic problem with Kai when not connected.
 - 22-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)